--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -65,7 +65,8 @@ filter:
   mytags:  Tous mes tags
   network_all:   Réseau global
   network_my:    Mon réseau
-  new_comments:   Nvx commentaires
+  new_comments:     Nvx commentaires
+  new_favoriteds:   Nvx favoris
   
 element_add:
   url:
