Evolution #164: Proposition de tag sur un élément
Ecriture du code permettant de proposer la liste de tag (lecture des prop pas encore codé)

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -55,6 +55,11 @@ element:
       label:            M'avertir en cas de nouveaux commentaires
   vote:
     good:               Ce partage mérite un point supplémentaire (cliquez a nouveau pour enlever)
+  tag_proposition:
+    form:
+      submit:           Proposer ces tags
+      cancel:           Annuler
+      description:      Proposez ci-dessous les tags que vous trouvez les plus appropriés pour ce partage
   
 comment:
   edit:
