--- a/app/Resources/FOSUserBundle/translations/FOSUserBundle.fr.yml
+++ b/app/Resources/FOSUserBundle/translations/FOSUserBundle.fr.yml
@@ -16,7 +16,7 @@ security:
     login:
         username: "Nom d'utilisateur:"
         password: "Mot de passe:"
-        remember_me: Se souvenir de moi
+        remember_me: Rester connecté
         submit: Connexion
 
 # Profile
