Evolution #176: Modération commentaire
Modération des commentaires signalés.

--- a/app/Resources/translations/adminui.fr.yml
+++ b/app/Resources/translations/adminui.fr.yml
@@ -10,3 +10,6 @@ moderate:
     action:
       delete:       Supprimer
       clean:         Tout est ok
+  comments:
+    title:          Commentaires
+    to_moderate:    %count% éléments concernés
