Evolution #187: String brute force
Remplacement du string dans le coe par du string dynamique.

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -138,3 +138,6 @@ comment:
       sentence:          Signaler ce commentaire comme inapproprié ?
       yes:               Oui
       no:                Non
+      
+search_tag:
+  title:                 Recherche de tag correspondant à \"%string_search%\" ...
