Evolution #166: La recherche
Intégration de la possibilité d'afficher les résultats éléments de la recherche global au fur et a mesure (afficher plus d'éléments).

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -142,3 +142,6 @@ comment:
       
 search_tag:
   title:                 Recherche de tag correspondant à \"%string_search%\" ...
+  
+global_search:
+  no_results:            Il n'y a aucun résultat a votre recherche.
