Mise en place du resharing, par le biais d'une boite de dialogue standart.

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -131,6 +131,12 @@ element:
       no:                Non
   proposition_tags:
     link_title:        Proposer des tags
+  reshare:
+    link_title:        Re-partager
+    confirm: 
+      sentence:          Re-partager ce partage ?
+      yes:               Oui
+      no:                Non
     
 comment:
   report:
