--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -21,6 +21,7 @@ element:
   name:
     who:                envoyé par <a href="%owner_url%">%owner_name%</a>
     whoandgroup:        envoyé par <a href="%owner_url%">%owner_name%</a> dans le groupe <a href="%group_url%">%group_name%</a>
+    reshare:            (re-partagé d'un partage de <a href="%owner_url%">%owner_name%</a>)
   link:                 Ouvrir la page d'origine
   edit:
     link:               Modifier
