Evolution #222: Demande de tags
Ajout de la possibilité de signaler l'élèment comme en demande de tags a l'ajout et a la modif (ou d'enlever).
test fonctionels

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -83,6 +83,8 @@ element_add:
     help:     |
               Copier ici le lien internet (http://) pointant sur la ressource 
               que vous souhaitez partager.
+  need_tags:
+    name:     Demander de l'aide pour tagger votre partage
   name:
     name:     Nom
     
