Evolution #357: Maj interface d'ajout
Modif partielle de l'interface d'ajout: champ url seul, avec bouton "ajouter"
Requete ajax qui récupère données des apis
reste a traiter ces données et afficher le reste du formulaire.

--- a/app/Resources/translations/navigationui.fr.yml
+++ b/app/Resources/translations/navigationui.fr.yml
@@ -23,6 +23,7 @@ home:
   add_element:          Ajouter un élément
   add_element_box:
     close:              Fermer
+  check_url:            Ajouter
   
 group:
   add_element:          Ajouter un élément dans ce groupe
