--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -79,14 +79,14 @@ filter:
   
 element_add:
   url:
-    name:     Lien
+    name:     http://
     help:     |
               Copier ici le lien internet (http://) pointant sur la ressource 
               que vous souhaitez partager.
   need_tags:
     name:     Demander de l'aide pour tagger votre partage
   name:
-    name:     Nom
+    name:     Titre de la piste - Artiste
     
   added_to_group:
     sentence:       |
