Evolution #357: Maj interface d'ajout
Procédure complète en place.
reste de la finission ergonomique.

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -78,6 +78,8 @@ filter:
   tag_strict:       Chaques tag doit être trouvé
   
 element_add:
+  prop_tags:
+    text:     "Proposition de tags:"
   url:
     name:     http://
     help:     |
