Evolution #357: Maj interface d'ajout
Contrôle du format de l'url (un peu léger pour le moment)

--- a/app/Resources/translations/validators.fr.yml
+++ b/app/Resources/translations/validators.fr.yml
@@ -33,6 +33,9 @@ error:
       notblank:          Vous devez saisir un nom
       toshort:           Le nom est trop court
       tolong:            Le nom est trop long
+  url:
+    invalid:             L'adresse fournie est invalide
+  
       
 registration:
   token:
