Evolution #298: Petits coeurs
Les petits coeur sont maintenant affichés par defaut si le tag est déjà dans les favoris

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -38,6 +38,8 @@ element:
         sentence:       Ajouter aux favoris ?
         yes:            Oui
         no:             Non
+    isfav:
+      title:            Le tag "%tagname%" fait partis de vos tags favoris
   comments: 
     add:                Ajouter un commentaire
     thereis:            Afficher le commentaire
