--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -64,6 +64,10 @@ tags:
     has_news_link:  cliquez ici pour les afficher
     has_news_link_one:  cliquez ici pour l'afficher
     has_news_link_more_x:  cliquez ici pour en afficher %x%
+  cloud:
+    display_more:           Des tags ont été cachés, cliquez ici pour les afficher tous
+    filter:
+      text:                 Chercher un tag parmis la liste
            
 filter:
   network: "Résultats de "
