Evolution #196: Liste de lecture
Mise en place librairie de récupération des elements a traiter
Partie js pour lecture auto

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -88,6 +88,8 @@ elements:
   ajax:
     more:
       noelements:       Pas d'autres éléments
+  autoplay:
+    launch:             Créer une liste de lecture avec ces paramètres
       
 show:
   user:
