Evolution #467: Autoplay: bouille, message
Boutons avancer, reculer et fermer en gros.
Ajout d'un petite message pour informer qu ele lecteur ne supporte
que certains sites.

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -165,3 +165,6 @@ need_tags:
                          Les utilisateurs ayant partagés leurs découvertes ont
                          demandé de l'aide pour tagger correctement leurs partages.
                          Gagnez en réputation en leurs proposants les tags qui conviennent !
+
+autoplay:
+  limitations_players:   La lecture automatique ne supporte actuellement que les lecteurs youtube et soundcloud.
