--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -73,7 +73,7 @@ filter:
   network: "Résultats de "
   submit:  Filtrer
   clear:   Aucun filtre
-  mytags:  Tous mes tags
+  mytags:  Filtrer avec Tags
   network_all:   Réseau global
   network_my:    Mon réseau
   new_comments:     Nvx commentaires
