--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -36,8 +36,12 @@ my_account:
 connexion:
   password_lost:    Mot de passe perdu ?
   
-more:    Afficher plus de résultats
+more:    Plus de résultats
 tags:
+  prompt:
+    help:  |
+            Choissiez un tag dans la liste ci-dessous en cliquant dessus. Pour saisir plusieurs tags
+            renouvellez l'opération pour chacuns d'entre eux.
   help:  |
            Saisissez <strong>une liste de tags</strong> ci-dessous: Entrez 
            <strong>un tag a la fois</strong> et choisissez les a l'aide de 
@@ -73,7 +77,7 @@ filter:
   network: "Résultats de "
   submit:  Filtrer
   clear:   Aucun filtre
-  mytags:  Filtrer avec Tags
+  mytags:  Avec filtre
   network_all:   Réseau global
   network_my:    Mon réseau
   new_comments:     Nvx commentaires
@@ -103,6 +107,7 @@ element_add:
     nothanks:       Non, ne pas diffuser cet élément dans un de mes groupes
   
 element_edit:
+  title:      Modifier un partage
   url:
     name:     Lien
   name:
@@ -145,6 +150,8 @@ element:
       sentence:          Re-partager ce partage dans votre flux ?
       yes:               Oui
       no:                Non
+  share:
+    share_button:        Partager
     
 comment:
   report:
