--- a/app/Resources/FOSUserBundle/translations/FOSUserBundle.fr.yml
+++ b/app/Resources/FOSUserBundle/translations/FOSUserBundle.fr.yml
@@ -14,8 +14,8 @@ group:
 # Security
 security:
     login:
-        username: "Nom d'utilisateur:"
-        password: "Mot de passe:"
+        username: "Identifiant (adresse email)"
+        password: "Mot de passe"
         remember_me: Rester connecté
         submit: Connexion
 
