--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -2,6 +2,11 @@ login:
   remember_me:
     label:     Rester connecté
 
+security:
+  login:
+    username: "Identifiant (adresse email)"
+    password: "Mot de passe"
+
 start:
   title:       Inscription terminé
   titleh2:     Bienvenue sur Muzich !
@@ -72,7 +77,20 @@ tags:
     display_more:           Des tags ont été cachés, cliquez ici pour les afficher tous
     filter:
       text:                 Chercher un tag parmis la liste
-           
+  favorites:
+    submit:                 Enregistrer ces tags
+
+submenu:
+  followed_users:
+    title:                  Utilisateurs suivis
+    nouser:                Aucun
+  followed_groups:
+    title:                  Groupes suivis
+    nouser:                Aucun
+  follower_users:
+    title:                  Suivis par
+    nouser:                Aucun
+
 filter:
   network: "Résultats de "
   submit:  Filtrer
@@ -172,6 +190,18 @@ need_tags:
                          Les utilisateurs ayant partagés leurs découvertes ont
                          demandé de l'aide pour tagger correctement leurs partages.
                          Gagnez en réputation en leurs proposants les tags qui conviennent !
+register:
+  title:                 Création d'un compte
+registration:
+  submit:                Procéder a l'inscription
 
 autoplay:
   limitations_players:   La lecture automatique ne supporte actuellement que les lecteurs youtube, soundcloud et jamendo.
+
+events:
+  view:
+    title:
+      comments:          Commentaires
+      nvxfav:            Mis en favoris
+      tagsprop:          Proposition de tags
+      
