--- a/app/Resources/translations/network.fr.yml
+++ b/app/Resources/translations/network.fr.yml
@@ -11,7 +11,7 @@ search:
     submit_value:       Rechercher
 users:                Utilisateurs
 groups:               Groupes
-followed_by:          Vous êtes suivis par
+followed_by:          Ces utilisateurs suivent désormais vos publications
 
 favorites:
   your_favorites:     Vos favoris
