créer un ticket pour: lorsque l'on ajoute plusieurs partages de suite: les tags du tagPrompt reste.

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -94,6 +94,10 @@ submenu:
   follower_users:
     title:                  Suivis par
     nouser:                Aucun
+  otherpages:
+    title:                 Pages spéciales
+    needtags:
+      title:               Partages en demandes de tags
 
 filter:
   network: "Résultats de "
