--- a/app/Resources/translations/text.fr.yml
+++ b/app/Resources/translations/text.fr.yml
@@ -16,4 +16,34 @@ about:
   text:           |
                   Grâce au réseau de Muzi.ch découvrez chaque jours de nouveaux son partagés
                   par les autres membres de ce réseau. Partagez egallement vos coup de coeurs 
-                  sur ce même réseau. 
+                  sur ce même réseau.
+
+mail:
+  resetting_password:
+    subject:      Muzi.ch: Réinitialisation du mot de passe
+    content:      >
+                  Bonjour %username%,
+
+                  Une demande de réinitialisation de votre mot de passe a été demandé. Si vous
+                  n'êtes pas a l'origine de cette demande, ne tenez pas compte de cet email.
+                  
+                  Si au contraire, vous souhaitez changer le mot de passe de votre accès a Muzi.ch
+                  rendez-vous à cette adresse: %url%
+                  
+                  Cordialement,
+                  
+                  l'équipe de Muzi.ch
+  change_email:
+    subject:      Muzi.ch: Changement de courriel
+    content:      >
+                  Bonjour %username%,
+
+                  Une demande de changement d'email a été demandé. Si vous
+                  n'êtes pas a l'origine de cette demande, ne tenez pas compte de cet email.
+                  
+                  Si au contraire, vous souhaitez définir cette nouvelle adresse email
+                  rendez-vous à cette adresse: %url%
+                  
+                  Cordialement,
+                  
+                  l'équipe de Muzi.ch
