--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -53,6 +53,12 @@ my_account:
         nocountry:  Veuillez saisir le pays
   help_clicks:      |
                     Cliquez sur les titres ci-dessous pour accèder aux autres paramètres
+  avatar:
+    title:          Mon avatar
+    submit:         Mettre à jour
+    help:           'Choisissez une image puis préssez le bouton "Mettre à jour"'
+    success:        Votre avatar a bien été mis à jour
+    error:          Une erreur est survenue lors de la mise à jour de votre avatar
   
 connexion:
   password_lost:    Mot de passe perdu ?
