Evolution #569: token réutilisable avec compteur
Fonctionnalité codé et testé.

--- a/app/Resources/translations/validators.fr.yml
+++ b/app/Resources/translations/validators.fr.yml
@@ -39,4 +39,4 @@ error:
       
 registration:
   token:
-    error:               Le code saisie pour l'inscription n'est pas correct
+    error:               Le code saisie pour l'inscription est incorrect ou n'est plus utilisable
