--- a/app/Resources/translations/flash.fr.yml
+++ b/app/Resources/translations/flash.fr.yml
@@ -31,3 +31,7 @@ user:
     success:       Votre email a correctement été mis a jour.
     wait:          Vous devez attendre avant de pouvoir faire une nouvelle demande de changement d'email.
   session_expired: Vous avez été déconnecté, veuillez vous ré-identifier
+
+presubscription:
+  success:         Nous avons bien pris note de votre demande !
+  error:           Une erreur est survenue, veuillez réessayer
