Evolution #591: Pages statiques

--- a/app/Resources/translations/navigationui.fr.yml
+++ b/app/Resources/translations/navigationui.fr.yml
@@ -49,3 +49,4 @@ bottom_menu:
   about:                A propos
   development:          Version en développement
   sites:                Sites supportés
+  cgu:                  CGU
