Modification sur le lancement de l'autoplay: L'autoplay demarre maintenant avec un element_id de reference. LE bouton de lancement est maintenant dans le bloc de l'element.

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -26,6 +26,8 @@ element:
   link:                 Ouvrir la page d'origine
   edit:
     link:               Modifier
+  autoplay:
+    title:              Lancer avec la lecture automatique
   remove:
     link:               Supprimer
     confirm:
