--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -65,6 +65,11 @@ my_account:
     help:           'Choisissez une image puis préssez le bouton "Mettre à jour"'
     success:        Votre avatar a bien été mis à jour
     error:          Une erreur est survenue lors de la mise à jour de votre avatar
+  preferences:
+    title:         Mes préférences
+    submit:         Enregistrer mes préférences
+    success:        Vos préférences ont bien été mises à jour
+    error:          Une erreur est survenue lors de la mise à jour de vos préférences
   
 connexion:
   password_lost:    Mot de passe perdu ?
