--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -16,7 +16,7 @@ element:
       will_be_in:       L'élément sera ajouté dans le groupe
     url_title_step2:    Ressource
   show:
-    close_embed:        Cacher le lecteur
+    close_embed:        Fermer le lecteur
     open_embed:         Afficher le lecteur
     open_link:          Ouvrir la page
   name:
