--- a/app/Resources/translations/flash.fr.yml
+++ b/app/Resources/translations/flash.fr.yml
@@ -22,17 +22,17 @@ element:
     error:        Une erreur est survenus lors de l'ajout.
   remove:
     success:      Element supprimé avec succés.
-    error:        Une errur est survenue durant la suppression de l'élément.
+    error:        Une erreur est survenue durant la suppression de l'élément.
     
 user:
   changeemail:
-    mail_send:     Un email a été envoyé a l'adresse communiqué pour confirmation.
+    mail_send:     Un email a été envoyé a l'adresse communiqué pour confirmation (vérifiez aussi dans vos SPAM).
     token_invalid: Le lien pour mettre a jour votre email est périmé, veuillez relancer la procédure.
     success:       Votre email a correctement été mis a jour.
     wait:          Vous devez attendre avant de pouvoir faire une nouvelle demande de changement d'email.
   session_expired: Vous avez été déconnecté, veuillez vous ré-identifier
 
 presubscription:
-  success:         Un email a été envoyé a votre adresse email pour confirmation
+  success:         Un email a été envoyé a votre adresse email pour confirmation (vérifiez aussi dans vos SPAM)
   error:           Une erreur est survenue, veuillez réessayer
   confirmed:       Votre email a bien été pris en compte, merci !
